@@ -93,14 +93,14 @@
     <bridgehead renderas="sect4">Optional</bridgehead>
     <para role="optional">
       <xref linkend="cyrus-sasl"/>,
-      <ulink url="http://sourceforge.net/projects/libdc1394/">libdc1394</ulink>,
-      <ulink url="http://www.linux1394.org/">libraw1394</ulink>,
       <xref linkend="lua"/>,
       <xref linkend="openldap"/>,
       <xref linkend="pulseaudio"/>,
       <xref linkend="sdl"/>,
-      <xref linkend="unixodbc"/>, and
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>
+      <xref linkend="unixodbc"/>, 
+      <xref linkend="v4l-utils"/>, 
+      <ulink url="http://sourceforge.net/projects/libdc1394/">libdc1394</ulink>, and
+      <ulink url="http://www.linux1394.org/">libraw1394</ulink>,
     </para>
 
     <para condition="html" role="usernotes">User Notes:
