@@ -79,8 +79,7 @@
       <xref linkend="gnome-desktop"/>,
       <xref linkend="gnome-video-effects"/>,
       <xref linkend="gst10-plugins-bad"/>,
-      <xref linkend="gst10-plugins-good"/> (built with 
-         <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>),
+      <xref linkend="gst10-plugins-good"/> (built with <xref linkend="v4l-utils"/>),
       <xref linkend="itstool"/>,
       <xref linkend="libcanberra"/>,
       <xref linkend="librsvg"/>, and
