@@ -45,8 +45,14 @@
 -->
 
     <listitem>
-      <para>March 4th, 2015</para>
+      <para>March 4rd, 2015</para>
       <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Archive unneeded agg library.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to cups-filters-1.0.66.</para>
+        </listitem>
         <listitem>
           <para>[pierre] - Split the JAVA environment configuration from
           the other pages. Put the Apache-ant and JUnit pages
@@ -62,7 +68,6 @@
     <listitem>
       <para>March 3rd, 2015</para>
       <itemizedlist>
-
         <listitem>
           <para>[bdubbs] - Add a sed to elfutils to fix a potential
           security flaw.</para>
