@@ -110,6 +110,7 @@
       <xref linkend="pulseaudio"/>,
       <xref linkend="speex"/>,
       <xref linkend="taglib"/>,
+      <xref linkend="v4l-utils"/>,
       <ulink url="http://www.jackaudio.org">JACK</ulink>,
       <ulink url="http://sourceforge.net/projects/libavc1394/">libavc1394</ulink>
       (requires 
@@ -118,8 +119,7 @@
       <ulink url="http://www.gnu.org/software/libcdio/">libcdio</ulink>,
       <ulink url="http://www.kernel.org/pub/linux/libs/ieee1394/">libiec61883</ulink>,
       <ulink url="http://downloads.us.xiph.org/releases/libshout/">libshout</ulink>,
-      <ulink url="http://code.entropywave.com/projects/orc/">ORC</ulink>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink> and
+      <ulink url="http://code.entropywave.com/projects/orc/">ORC</ulink>, and
       <ulink url="http://www.wavpack.com/">WavPack</ulink>
     </para>
 
