@@ -1,0 +1,256 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE sect1 PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
+   "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
+  <!ENTITY % general-entities SYSTEM "../../general.ent">
+  %general-entities;
+
+  <!ENTITY v4l-download-http "http://www.linuxtv.org/downloads/v4l-utils/v4l-utils-&v4l-utils-version;/.tar.bz2">
+  <!ENTITY v4l-download-ftp  " ">
+  <!ENTITY v4l-md5sum        "9cb3c178f937954e65bf30920af433ef">
+  <!ENTITY v4l-size          "1.1 MB">
+  <!ENTITY v4l-buildsize     "63 MB">
+  <!ENTITY v4l-time          "0.5 SBU">
+]>
+
+<sect1 id="v4l-utils" xreflabel="v4l-utils-&v4l-utils-version;">
+  <?dbhtml filename="atk.html" ?>
+
+  <sect1info>
+    <othername>$LastChangedBy: bdubbs $</othername>
+    <date>$Date: 2015-02-21 22:09:10 -0600 (Sat, 21 Feb 2015) $</date>
+  </sect1info>
+
+  <title>v4l-utils-&v4l-utils-version;</title>
+
+  <indexterm zone="v4l-utils">
+    <primary sortas="a-v4l-utils">v4l-utils</primary>
+  </indexterm>
+
+  <sect2 role="package">
+    <title>Introduction to v4l-utils</title>
+
+    <para>
+      <application>v4l-utils</application> provides  a series of utilities for
+      media devices, allowing to handle the proprietary formats available at
+      most webcams (libv4l), and providing tools to test V4L devices. 
+    </para>
+
+    &lfs77_checked;
+
+    <bridgehead renderas="sect3">Package Information</bridgehead>
+    <itemizedlist spacing="compact">
+      <listitem>
+        <para>
+          Download (HTTP): <ulink url="&v4l-download-http;"/>
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download (FTP): <ulink url="&v4l-download-ftp;"/>
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download MD5 sum: &v4l-md5sum;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Download size: &v4l-size;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Estimated disk space required: &v4l-buildsize;
+        </para>
+      </listitem>
+      <listitem>
+        <para>
+          Estimated build time: &v4l-time;
+        </para>
+      </listitem>
+    </itemizedlist>
+
+    <bridgehead renderas="sect3">v4l-utils Dependencies</bridgehead>
+
+    <bridgehead renderas="sect4">Required</bridgehead>
+    <para role="required">
+      <xref linkend="glu"/>,
+      <xref linkend="libjpeg"/>, and
+      <xref linkend="mesalib"/>
+    </para>
+
+    <bridgehead renderas="sect4">Recommended</bridgehead>
+    <para role="optional">
+      <xref linkend="alsa-lib"/> and
+      <xref linkend="qt4"/> or
+      <xref linkend="qt5"/>
+    </para>
+
+    <bridgehead renderas="sect4">Optional</bridgehead>
+    <para role="optional">
+      <xref linkend="doxygen"/>
+    </para>
+
+    <para condition="html" role="usernotes">User Notes:
+      <ulink url="&blfs-wiki;/v4l-utils"/>
+    </para>
+  </sect2>
+
+  <sect2 role="installation">
+    <title>Installation of v4l-utils</title>
+
+    <para>
+      Install <application>v4l-utils</application> by running
+      the following commands:
+    </para>
+
+<screen><userinput>./configure --prefix=/usr     \
+            --sysconfdir=/etc \
+            --disable-static  &amp;&amp;
+make</userinput></screen>
+
+    <para>
+      This package does not come with a testsuite.
+    </para>
+
+    <para>
+      Now, as the <systemitem class="username">root</systemitem> user:
+    </para>
+
+<screen role="root"><userinput>make install</userinput></screen>
+
+  </sect2>
+
+  <sect2 role="content">
+    <title>Contents</title>
+
+    <segmentedlist>
+      <segtitle>Installed Programs</segtitle>
+      <segtitle>Installed Library</segtitle>
+      <segtitle>Installed Directories</segtitle>
+
+      <seglistitem>
+        <seg>
+          x18-ctl,
+          decode_tm6000,
+          dvb-fe-tool,
+          dvb-format-convert,
+          dvbv5-scan,
+          dvbv5-zap,
+          ir-keytable,
+          ivtv-ctl,
+          media-ctl,
+          qv4l2,
+          rds-ctl,
+          v4l2-compliance,
+          v4l2-ctl,
+          v4l2-dbg, and
+          v4l2-sysfs-path
+        </seg>
+        <seg>
+          libdvbv5.so,
+          libv4l-mplane.so,
+          libv4l1.so,
+          libv4l2.so,
+          libv4l2rds.so,
+          libv4lconvert.so,
+          v4l1compat.so, and
+          v4l2convert.so
+        </seg>
+        <seg>
+          /lib/udev/rc_keymaps
+          /usr/include/libdvbv5, 
+          /usr/lib/libv4l, and 
+          /usr/lib/libv4l/plugins 
+        </seg>
+      </seglistitem>
+    </segmentedlist>
+
+    <variablelist>
+      <bridgehead renderas="sect3">Short Descriptions</bridgehead>
+      <?dbfo list-presentation="list"?>
+      <?dbhtml list-presentation="table"?>
+
+      <varlistentry id="dvb-fe-tool">
+        <term><command>dvb-fe-tool</command></term>
+        <listitem>
+          <para>
+            is a command line tool for digital TV services.
+          </para>
+          <indexterm zone="v4l-utils dvb-fe-tool">
+            <primary sortas="b-dvb-fe-tool">dvb-fe-tool</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="dvb-format-convert">
+        <term><command>dvb-format-convert</command></term>
+        <listitem>
+          <para>
+            is a tool meant to convert among different file formats.  It is
+            compliant with version 5 of the DVB API.
+          </para>
+          <indexterm zone="v4l-utils dvb-format-convert">
+            <primary sortas="b-dvb-format-convert">dvb-format-convert</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="dvbv5-scan">
+        <term><command>dvbv5-scan</command></term>
+        <listitem>
+          <para>
+            is  command line frequency scanning tool for digital TV 
+            services that are compliant with version 5 of the DVB API.
+          </para>
+          <indexterm zone="v4l-utils dvbv5-scan">
+            <primary sortas="b-dvbv5-scan">dvbv5-scan</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="dvbv5-zap">
+        <term><command>dvbv5-zap</command></term>
+        <listitem>
+          <para>
+            is a command line tuning tool for digital TV services 
+            that is compliant with version 5 of the DVB API.
+          </para>
+          <indexterm zone="v4l-utils dvbv5-zap">
+            <primary sortas="b-dvbv5-zap">dvbv5-zap</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="ir-keytable">
+        <term><command>ir-keytable</command></term>
+        <listitem>
+          <para>
+            is a tool that lists the Remote Controller devices, allows one 
+            to get/set IR keycode/scancode tables, test events generated by 
+            IR, and to adjust other Remote Controller options.
+          </para>
+          <indexterm zone="v4l-utils ir-keytable">
+            <primary sortas="b-ir-keytable">ir-keytable</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry id="qv4l2">
+        <term><command>qv4l2</command></term>
+        <listitem>
+          <para>
+            is  used  to  test video4linux capture devices.
+          </para>
+          <indexterm zone="v4l-utils qv4l2">
+            <primary sortas="b-qv4l2">qv4l2</primary>
+          </indexterm>
+        </listitem>
+      </varlistentry>
+
+    </variablelist>
+
+  </sect2>
+
+</sect1>
