@@ -99,6 +99,7 @@
       <xref linkend="sdl"/>,
       <xref linkend="speex"/>,
       <xref linkend="doxygen"/> (to create the API documentation),
+      <xref linkend="v4l-utils"/>
       <ulink url="http://www.directfb.org">DirectFB</ulink>,
       <ulink url="http://www.videolan.org/developers/libbluray.html">libbluray</ulink>,
       <ulink url="http://sam.zoy.org/projects/libcaca/">libcaca</ulink>,
@@ -106,8 +107,7 @@
       <ulink url="http://fame.sourceforge.net">libFAME</ulink>,
       <ulink url="http://sourceforge.net/projects/modplug-xmms/">libmodplug</ulink>,
       <ulink url="http://www.musepack.net/">musepack</ulink>,
-      <ulink url="http://ftp.gnu.org/gnu/vcdimager/">VCDImager</ulink>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>, and
+      <ulink url="http://ftp.gnu.org/gnu/vcdimager/">VCDImager</ulink>, and
       <ulink url="http://www.wavpack.com/">WavPack</ulink>,
     </para>
 
