@@ -113,6 +113,7 @@
       <xref linkend="gnutls"/>,
       <xref linkend="fontconfig"/>,
       <xref linkend="opus"/>,
+      <xref linkend="v4l-utils"/>,
 <!--  <ulink url="http://www.piksel.org/frei0r">frei0r</ulink>,-->
       <ulink url="https://files.dyne.org/frei0r/snapshots/">frei0r</ulink>,
       <ulink url="http://xhevc.com/en/hevc/decoder/download.jsp">HEVC/H.265</ulink>,
@@ -137,7 +138,6 @@
       <ulink url="http://diracvideo.org/">Schroedinger</ulink>,
       <xref linkend="texlive"/> (or <xref linkend="tl-installer"/>) for PDF and PS documentation,
       <ulink url="http://www.twolame.org/">TwoLAME</ulink>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>,
       <ulink url="http://sourceforge.net/projects/opencore-amr/files/vo-aacenc/">vo-aaenc</ulink>,
       <ulink url="http://sourceforge.net/projects/opencore-amr/files/vo-amrwbenc/">vo-amrwbenc</ulink>,
       <ulink url="http://xavs.sourceforge.net/">libxavs</ulink> (SVN checkout),
