@@ -113,12 +113,12 @@
       <xref linkend="libvorbis"/>,
       <xref linkend="libxml2"/>,
       <xref linkend="lzo"/>,
-      <ulink url="http://sourceforge.net/projects/mjpeg/">MJPEG Tools</ulink>,
-      <ulink url="http://www.netlib.org/pvm3/">PVM3</ulink>,
       <xref linkend="sdl"/>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>,
-      <xref linkend="x264"/>, and
+      <xref linkend="v4l-utils"/>,
+      <xref linkend="x264"/>, 
       <xref linkend="xvid"/>
+      <ulink url="http://sourceforge.net/projects/mjpeg/">MJPEG Tools</ulink>, and
+      <ulink url="http://www.netlib.org/pvm3/">PVM3</ulink>,
     </para>
 
     <para condition="html" role="usernotes">User Notes:
