@@ -101,13 +101,13 @@
       <xref linkend="libdvdread"/>,
       <xref linkend="libdvdnav"/>,
       <xref linkend="samba"/>,
+      <xref linkend="v4l-utils"/>,
       <ulink url="http://www.videolan.org/developers/libbluray.html">libbluray</ulink>,
       <ulink url="http://sourceforge.net/projects/libdc1394/">libdc1394</ulink>,
       <ulink url="http://sourceforge.net/projects/libcddb/">libcddb</ulink>,
       <ulink url="http://code.google.com/p/libproxy/">libproxy</ulink>,
       <ulink url="http://www.live555.com/">Live555</ulink>,
-      <ulink url="http://sourceforge.net/projects/opencvlibrary/">OpenCV</ulink>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>, and
+      <ulink url="http://sourceforge.net/projects/opencvlibrary/">OpenCV</ulink>, and
       <ulink url="http://www.gnu.org/software/vcdimager/">VCDImager</ulink>
       (requires <ulink url="http://www.gnu.org/software/libcdio/">libcdio</ulink>)
     </para>
