@@ -676,6 +676,7 @@
 <!ENTITY speex-version                "1.2rc2">
 <!ENTITY speexdsp-version             "1.2rc3">
 <!ENTITY taglib-version               "1.9.1">
+<!ENTITY v4l-utils-version            "1.6.2">
 <!ENTITY x264-version                 "20141208-2245">
 <!ENTITY xine-lib-version             "1.2.6">
 <!ENTITY xvid-version                 "1.3.3">
@@ -716,7 +717,7 @@
 <!-- Part XII -->
 <!-- Chapter 42 -->
 <!ENTITY cups-version                 "2.0.2">
-<!ENTITY cups-filters-version         "1.0.65">
+<!ENTITY cups-filters-version         "1.0.66">
 <!ENTITY gs-version                   "9.15">
 <!ENTITY gutenprint-version           "5.2.10">
 
