@@ -7,9 +7,9 @@
   <!ENTITY cups-filters-download-http
   "https://www.openprinting.org/download/cups-filters/cups-filters-&cups-filters-version;.tar.xz">
   <!ENTITY cups-filters-download-ftp  " ">
-  <!ENTITY cups-filters-md5sum        "20dea125408bfebd25a58a884a78a13c">
+  <!ENTITY cups-filters-md5sum        "ad594ac06dfbfb02af34deb0805cab00">
   <!ENTITY cups-filters-size          "1.3 MB">
-  <!ENTITY cups-filters-buildsize     "36 MB (additional 2 MB for the tests)">
+  <!ENTITY cups-filters-buildsize     "34 MB (additional 2 MB for the tests)">
   <!ENTITY cups-filters-time          "0.4 SBU">
 ]>
 
@@ -72,7 +72,7 @@
         </para>
       </listitem>
     </itemizedlist>
-
+<!--
     <bridgehead renderas="sect3">Additional Downloads</bridgehead>
     <itemizedlist spacing="compact">
       <listitem>
@@ -82,7 +82,7 @@
         </para>
       </listitem>
     </itemizedlist>
-
+-->
     <bridgehead renderas="sect3">CUPS Filters Dependencies</bridgehead>
 
     <bridgehead renderas="sect4">Required</bridgehead>
@@ -127,10 +127,11 @@
       Install <application>CUPS Filters</application> by running the following
       commands:
     </para>
+<!--
+<userinput>patch -Np1 -i ../cups-filters-&cups-filters-version;-poppler_fix-1.patch &amp;&amp;
+-->
 
-<screen><userinput>patch -Np1 -i ../cups-filters-&cups-filters-version;-poppler_fix-1.patch &amp;&amp;
-
-./configure --prefix=/usr                   \
+<screen><userinput>./configure --prefix=/usr                   \
             --sysconfdir=/etc               \
             --localstatedir=/var            \
             --without-rcdir                 \
