@@ -136,10 +136,10 @@
       <xref linkend="libjpeg"/>,
       <xref linkend="libtiff"/>,
       <xref linkend="libusb"/>,
+      <xref linkend="v4l-utils"/>,
       <ulink url="http://www.net-snmp.org/">Net-SNMP</ulink>,
       <ulink url="http://cyberelk.net/tim/libieee1284/">libieee1284</ulink>,
-      <ulink url="http://www.gphoto.org/">libgphoto2</ulink>,
-      <ulink url="http://linuxtv.org/downloads/v4l-utils/">Video4Linux</ulink>, and
+      <ulink url="http://www.gphoto.org/">libgphoto2</ulink>, and
       <xref linkend="texlive"/> (or <xref linkend="tl-installer"/>)
     </para>
 
