@@ -24,7 +24,6 @@ $Date$
   feel and inter-process communications for different applications. They also
   assist programmers by supplying common elements.</para>
 
-  <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="agg.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="atk.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="atkmm.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="at-spi2-core.xml"/>
